file name correction

--- a/esma/Hayy.html
+++ b/esma/Hayy.html
@@ -28,7 +28,7 @@
   Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/kayyum">İslam Ansiklopedisi</a>
 </p>
 <br>
-<img class=narrow src="image/el-hayy.jpg" alt="el-hayy"></p>
+<img class=narrow src="image/el-Hayy.jpg" alt="el-hayy"></p>
 <div class="caption">
   <b>el-Hayy</b> -- canlı, hayat kaynağı<br>
   <b>el-Kayyûm</b> -- hayatı elinde tutan
