--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -242,7 +242,7 @@ yuhricul hayye.jpg	Muhyi	v=30:19&r=mwt&r=Hyy
 el-muhyi.png	Muhyi	v=30:50&r=mwt&r=Hyy
 el-mumit.png	Muhyi	v=40:68&r=mwt&r=Hyy
 anetil-vucuh.jpg	Hayy	v=20:111&r=Hyy&r=qwm
-el-hayy.jpg	Hayy	v=2:255&r=Hyy&r=qwm
+el-Hayy.jpg	Hayy	v=2:255&r=Hyy&r=qwm
 el-Mumit.jpg	Hayy	v=3:2&r=Hyy&r=qwm`
 
 function readData() {
