--- a/esma/Rahman.html
+++ b/esma/Rahman.html
@@ -27,8 +27,16 @@ Demek ki Rahmân, kendi nefsine yazdığı rahmetinin gereği olarak Kuran'ı ö
 <p>Bu isim Allah'ın has ismidir, başkası için asla kullanılmaz. Kitabımızda 18 surede 57 kere geçer ve hepsi "er-Rahmân" şeklinde belirlidir. Belirsiz olarak, "Rahmân" halinde kullanılmaz. İslam öncesi kültürlerde de var olduğunu biliyoruz. "Allah" ismini kullanan Mekke müşrikleri, belki ırkçılık nedeniyle, "Rahmân"ı tanımayı inatla reddettiler.</p>
 <br>
 <p>Diğer ismin tecellisi ise iman gerektiriyor:<br>
-<a name="v=33:43&r=rHm">33:43</a> <b>vekâne bilmu-minîne rahîmâ</b><br>
+<a name="v=33:43&r=Amn&r=rHm">33:43</a> <b>vekâne bilmu-minîne rahîmâ</b><br>
 Yani "Rahîm" ismi ancak ona layık olan müminler için...</p>
+<p>Hz Nuh'un dilinde "bismillah" biraz farklı, ama yine "Rahîm" ismiyle bitiyor:
+  <img src="image/mecraha.jpg" alt="bismillâhi mecrâhâ vemursâhâ"></p>
+  <p>
+    <a name="v=11:41&w=bisomi%20{ll~ahi">11:41</a> 
+    <b>bismillâhi mecrâhâ vemursâhâ, inne rabbî leġafûrun rahîm</b> <br>
+    <i>“Haydi, binin artık; yürümesi de, demir atması da Allah'ın adıyla olan bu gemiye! Doğrusu, Rabbim gerçekten bağışlayıcıdır, esirgeyicidir!”</i>
+  </p>
+  
 <br>
 <p>Bu iki rahmet ismi altı ayette yan yana geçiyor:
 <img class=full src="./image/errahman errahim.png" alt="iki isim yan yana"></p>
