--- a/esma/Evvel.html
+++ b/esma/Evvel.html
@@ -11,32 +11,27 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>el-Evvel, el-Âhir &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
-</p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
+<p>Hadid Suresinin ilk üç ayetinde 11 adet güzel isim okuyoruz. Bunların iki çifti iki günün konusu oluyor.</p>  
+<p>Her şeyin ilki olan <b>el-Evvel</b> ve sonu olan <b>el-Âhir</b> yalnız şu ayette geçiyor:
+<img src="image/huvel-evvelu.jpg" alt="huvel-evvelu"></p>
+<div class="caption">
+  <b>huvel-evvelu vel-âḣiru vez-zâhiru vel-bâtin</b> <br>
+  <a name="v=57:3&r=Awl&r=Axr">57:3</a> 
+  <i>O, evvel ve âhirdir, zâhir ve bâtındır</i> <br>
+  Kaynak: <a target=Kuran href="https://www.simurgsanatevi.com/huvel-evvelu-vel-ahiru--yagli-boya-hat-tablo">Simurg Sanatevi</a>
+</div>
+<br>
+<p class=small>Âlimler evvel ve âhir isimlerinin Kur’ân-ı Kerîm’de olduğu gibi beraberce kullanılmasının gerektiğini söyler. Çünkü bunlar yaratılmışlar için söz konusu edildiğinde diğer bir varlığa göre öncelik veya sonralık gibi belli bir zaman ifade ederse de Allah’a izâfe edilince muhtevalarında ne izâfet ne de öncelik ve sonralık düşünülebilir. Şu halde O’nun evveliyet ve âhiriyeti zamanın başlangıç ve sonuç sınırlarının üstünde oluşu, başka bir deyişle esasen mevhum veya sadece zihnî bir kavram niteliği taşıyan zamandan münezzeh bulunuşu demektir. Bu mânanın da ancak iki ismin beraber kullanılmasıyla elde edilebileceği kabul edilmiştir.<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/evvel">İslam Ansiklopedisi</a>
 </p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>Mesela, bir elmanın evveli elbette çekirdeğidir. Elma çürümeye bırakılırsa, bir ay gibi kısa zamanda yalnız çekirdekleri kalır. Demek ki, âhiri de yine çekirdek... Peki ya çekirdeğin evveli? "Elma" iyi bir cevap değil, çünkü ilk çekirdeğin nereden geldiğini açıklamıyor. "Allah'tan geldi" diyerek evvelini, "Allah'a dönecek" diyerek âhirini belirlemiş oluruz. 
+<img class=narrow src="image/el-ahir.png" alt="el-ahir"></p>
 <div class="caption">
-  <b></b> -- 
+  <b>el-Âhir</b> -- son
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
-<div class="caption">
-  <b></b> -- 
-</div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
-</p>
+<br>
 <script src="init.js"></script>
   </body>
 </html>
