--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -243,7 +243,9 @@ el-muhyi.png	Muhyi	v=30:50&r=mwt&r=Hyy
 el-mumit.png	Muhyi	v=40:68&r=mwt&r=Hyy
 anetil-vucuh.jpg	Hayy	v=20:111&r=Hyy&r=qwm
 el-Hayy.jpg	Hayy	v=2:255&r=Hyy&r=qwm
-el-Mumit.jpg	Hayy	v=3:2&r=Hyy&r=qwm`
+el-Mumit.jpg	Hayy	v=3:2&r=Hyy&r=qwm
+huvel-evvelu.jpg	Evvel	v=57:3&r=Awl&r=Axr
+el-ahir.png	Evvel	v=57:3&r=Awl&r=Axr`
 
 function readData() {
   for (let d of DATA.split('\n')) {
