--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+10) {
+    #iki li:nth-child(n+11) {
         color: lightgray;
     }
     div.nav {
@@ -83,15 +83,18 @@
   <li>20. <a href="/Kitap/esma/Vedud.html">el-Vedûd, el-Mecîd</a>
   <li>21. <a href="/Kitap/esma/Muhyi.html">el-Muhyî, el-Mumît</a>
   <li>22. <a href="/Kitap/esma/Hayy.html">el-Hayy, el-Kayyûm</a>
-  <li>23. el-Evvel, el-Âhir
+  <li>23. <a href="/Kitap/esma/Evvel.html">el-Evvel, el-Âhir</a>
   <li>24. ez-Zâhir, el-Bâtın
   <li>25. el-Kâdir, el-Muktedir
   <li>26. en-Nûr, el-Hâdî
-  <li>27. el-Kebîr, el-Muteâl
+  <li>27. el-Kebîr, el-Kerîm
   <li>28. el-Ganî, el-Hamîd
   <li>29. zul-celâli vel-ikrâm
 </ol>
-<p><br></p>
+
+<p><br>Bu çalışmanın yan ürünü olarak, 80 kadar hat eserine tek sayfadan erişim sağlandı: <a href="/Kitap/esma/Husna.html">Levhalar</a>
+</p>
+<br>
 <script src="init.js"></script>
   </body>
 </html>
