--- a/esma/Evvel.html
+++ b/esma/Evvel.html
@@ -13,8 +13,8 @@
 
 <h3>el-Evvel, el-Âhir &emsp;<button class=goBack>◀</button></h3>
 
-<p>Hadid Suresinin ilk üç ayetinde 11 adet güzel isim okuyoruz. Bunların iki çifti iki günün konusu oluyor.</p>  
-<p>Her şeyin ilki olan <b>el-Evvel</b> ve sonu olan <b>el-Âhir</b> yalnız şu ayette geçiyor:
+<p>Hadid Suresinin ilk üç ayetinde 11 adet güzel isim okuyoruz: el-Azîz, el-Hakîm, el-Mâlik, el-Muhyî, el-Mumît, el-Kadîr, <b>el-Evvel, el-Âhir, ez-Zâhir, el-Bâtın,</b> el-Alîm. Bunların iki çifti iki günün konusu oluyor.</p>  
+<p>Her şeyin ilki olan <b>el-Evvel</b> ve sonu olan <b>el-Âhir</b> yalnız bu ayette geçiyor:
 <img src="image/huvel-evvelu.jpg" alt="huvel-evvelu"></p>
 <div class="caption">
   <b>huvel-evvelu vel-âḣiru vez-zâhiru vel-bâtin</b> <br>
@@ -25,7 +25,12 @@
 <br>
 <p class=small>Âlimler evvel ve âhir isimlerinin Kur’ân-ı Kerîm’de olduğu gibi beraberce kullanılmasının gerektiğini söyler. Çünkü bunlar yaratılmışlar için söz konusu edildiğinde diğer bir varlığa göre öncelik veya sonralık gibi belli bir zaman ifade ederse de Allah’a izâfe edilince muhtevalarında ne izâfet ne de öncelik ve sonralık düşünülebilir. Şu halde O’nun evveliyet ve âhiriyeti zamanın başlangıç ve sonuç sınırlarının üstünde oluşu, başka bir deyişle esasen mevhum veya sadece zihnî bir kavram niteliği taşıyan zamandan münezzeh bulunuşu demektir. Bu mânanın da ancak iki ismin beraber kullanılmasıyla elde edilebileceği kabul edilmiştir.<br>
   Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/evvel">İslam Ansiklopedisi</a>
-</p><br>
+</p>
+<p>
+<img class=narrow src="image/el-evvel.png" alt="el-evvel"></p>
+<div class="caption">
+  <b>el-Evvel</b> -- ilk
+</div>
 <p>Mesela, bir elmanın evveli elbette çekirdeğidir. Elma çürümeye bırakılırsa, bir ay gibi kısa zamanda yalnız çekirdekleri kalır. Demek ki, âhiri de yine çekirdek... Peki ya çekirdeğin evveli? "Elma" iyi bir cevap değil, çünkü ilk çekirdeğin nereden geldiğini açıklamıyor. "Allah'tan geldi" diyerek evvelini, "Allah'a dönecek" diyerek âhirini belirlemiş oluruz. 
 <img class=narrow src="image/el-ahir.png" alt="el-ahir"></p>
 <div class="caption">
