--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -181,6 +181,7 @@ function init() {
 const DATA = 
 `Batanay_besmele.jpg	Rahman	v=1:1&r=rHm
 Rahman.jpg	Rahman	v=55:1&r=rHm&r=Elm&r=qrA
+mecraha.jpg	Rahman	v=11:41&w=bisomi%20{ll~ahi
 errahman errahim.png		
 inneniy enallah.jpg	Allah	v=20:14
 vezkur rabbeke.jpg	Allah	v=3:41&r=*kr&r=rbb&r=kvr
@@ -188,7 +189,7 @@ vezkurullahe.jpg
 malikul-mulk.jpg	Malik	v=3:26&r=mlk
 maliki yevmiddin.jpg	Malik	v=1:4&r=mlk&r=ywm
 melikul-hakkul-mubin.jpg	Malik	v=23:116&r=mlk&r=Hqq
-sayfa 547.png	Selam	
+sayfa 547.png	Selam		
 Kuddûs-Selâm.jpg	Selam	v=59:23&r=mlk&r=qds&r=slm
 es-Selâm.jpg	Selam	v=10:25&r=dwr&r=slm
 el-Mumin.jpg	Mumin	v=59:23&r=Amn&r=hmn
@@ -245,7 +246,11 @@ anetil-vucuh.jpg	Hayy	v=20:111&r=Hyy&r=qwm
 el-Hayy.jpg	Hayy	v=2:255&r=Hyy&r=qwm
 el-Mumit.jpg	Hayy	v=3:2&r=Hyy&r=qwm
 huvel-evvelu.jpg	Evvel	v=57:3&r=Awl&r=Axr
-el-ahir.png	Evvel	v=57:3&r=Awl&r=Axr`
+el-evvel.png	Evvel	v=57:3&r=Awl&r=Axr
+el-ahir.png	Evvel	v=57:3&r=Awl&r=Axr
+huvez-zahiru.jpg	Zahir	v=57:3&r=Zhr&r=bTn
+ez-zahir.jpg	Zahir	v=57:3&r=Zhr&r=bTn
+el-batin.png	Zahir	v=57:3&r=Zhr&r=bTn`
 
 function readData() {
   for (let d of DATA.split('\n')) {
