--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+11) {
+    #iki li:nth-child(n+12) {
         color: lightgray;
     }
     div.nav {
@@ -84,7 +84,7 @@
   <li>21. <a href="/Kitap/esma/Muhyi.html">el-Muhyî, el-Mumît</a>
   <li>22. <a href="/Kitap/esma/Hayy.html">el-Hayy, el-Kayyûm</a>
   <li>23. <a href="/Kitap/esma/Evvel.html">el-Evvel, el-Âhir</a>
-  <li>24. ez-Zâhir, el-Bâtın
+  <li>24. <a href="/Kitap/esma/Zahir.html">ez-Zâhir, el-Bâtın</a>
   <li>25. el-Kâdir, el-Muktedir
   <li>26. en-Nûr, el-Hâdî
   <li>27. el-Kebîr, el-Kerîm
