--- a/esma/Gani.html
+++ b/esma/Gani.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>el-Ganî, el-Hamîd &emsp;<button class=goBack>◀</button></h3>
 
 <p></p>  
 <p>
