--- a/esma/Kadir.html
+++ b/esma/Kadir.html
@@ -13,29 +13,49 @@
 
 <h3>el-Kâdir, el-Muktedir &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p>Kudret isimleri üç adet:
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
+<p>Kudret ismi yılın en önemli gecesini tanımlıyor:
+<img class=full src="image/leyletul kadri.jpg" alt="leyletul kadri"></p>
+<div class="caption">
+  Hattat: <a target=Kuran href="https://gzt.com/lugat/bin-aydan-daha-hayirli-bir-gece-kadir-gecesi-3545124">Mehmed Özçay</a>
+</div>
+<p><a name="v=97:3&r=lyl&r=qdr">97:3</a> 
+  <b>leyletul-kadri ḣayrun min elfi şehr</b> <br>
+  <i>Kadir gecesi bin aydan hayırlıdır</i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
+<br>
 <p>
-<img class=narrow src="" alt=""></p>
+<img class=narrow src="image/el-kadir.jpg" alt="el-Kâdir"></p>
 <div class="caption">
-  <b>el-Kâdir</b> -- her şeye gücü yeten
+  <b>el-Kâdir</b> -- her şeye gücü yeten <br>
+  Kaynak: <a target=Kuran href="https://pinterest.de/pin/1107604102076210644/">Pinterest</a>
 </div>
+<br>
+<p><a name="v=6:65&r=E*b&r=qdr">6:65</a> 
+  <b>kul huvel-kâdiru ‘alâ en yeb‘aśe ‘aleykum ‘ażâben</b> <br>
+  <i>De ki: “O'nun size üstünüzden (gökten) veya ayaklarınızın altından (yerden) bir azap göndermeye ya da birbirinize düşürüp birbirinizin öfkesini tattırmaya da gücü yeter.”</i>
+</p>
 <p>
-<img class=narrow src="" alt=""></p>
+<img class=narrow src="image/el-muktedir.jpg" alt="el-muktedir"></p>
 <div class="caption">
-  <b>el-Muktedir</b> -- fiilen güç yetiren
+  <b>el-Muktedir</b> -- fiilen güç yetiren <br>
+  Kaynak: <a target=Kuran href="https://pinterest.de/pin/5770305760892358/">Pinterest</a>
 </div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
+<p><a name="v=54:55&r=mlk&r=qdr">54:55</a> 
+  <b>fî maq'adi sidqin 'inde melîkin muqtedir</b> <br>
+  <i>Doğruluk tahtında, Muktedir bir Melîk'in yüce katında</i>
+</p>
+<br>
+<p class=small>Kudret kavramı Kur’ân-ı Kerîm’de 103 yerde Allah’a nisbet ... kullanılmıştır. <b>Kādir</b> ismi yedi âyette tekil, beş âyette tâzim ifade etmek üzere çoğul sîgasıyla Allah’a izâfe edilmiştir. Bunlardan başka <i>doksan dokuz isim listesinde bulunmayan</i> <b>Kadîr</b> ismi kırk beş âyette, <b>Muktedir</b> ismi de dört âyette zât-ı ilâhiyyeyi nitelemektedir.<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/kadir">İslam Ansiklopedisi</a>
+</p>
+<p>99 isim listesinde olmayan <b>Kadîr</b> sıfatı tam <a href="/Rehber/finder.html#b=$aYo'K%20qadiyrN">33 âyette</a> şu kalıpta kullanılmış:
+<img class=narrow src="image/vehuve ala.jpg" alt="vehuve ‘alâ kulli şey-in kadîr"></p>
+<div class="caption">
+  Hat: Berrak Özdoğan <a target=Kuran href="https://tr.pinterest.com/pin/536491374355162514/">Pinterest</a>
+</div>
+<p><a name="v=67:1&r=qdr&r=$yA">67:1</a>
+  <b>vehuve ‘alâ kulli şey-in kadîr</b> <br>
+  <i>O’nun her şeye gücü yeter</i>
 </p>
 <script src="init.js"></script>
 <script>window.max_index=getIndex() //REMOVE THIS</script>
