--- a/esma/Zahir.html
+++ b/esma/Zahir.html
@@ -23,7 +23,7 @@
 </div>
 <p class="preWrap small">Dört ismin işaret ettiği dört tevhid sikkesini bir elma ağacında görelim:
 1. Evvel: Ağacın bütün programını, daha ağaç yokken, bu çekirdeğin içine yazdı.
-2. Ahir: Programı açtı, uyguladı, sonra tekrar meyvelerin içine latif bir şekilde dürüp koydu.
+2. Ahir: Programı açtı, uyguladı, sonra meyvelerin içine latif bir şekilde dürüp koydu.
 3. Zahir: Çekirdekte programı yazılı olan ağacı maddi aleme çıkartıp gösterdi.
 4. Batın: Ağacın iç yapısında görülmeyen, ölçülmeyen, bilinmeyen nice unsur var... 
 Kaynak: <a target=Kuran href="https://nurkoy.org/evvel-ahir-zahir-batin-ismi/">Risale-i Nur (Şualar)</a>
