--- a/esma/Vehhab.html
+++ b/esma/Vehhab.html
@@ -13,13 +13,15 @@
 
 <h3>el-Vehhâb, er-Rezzâk &emsp;<button class=goBack>◀</button></h3>
 
-<p>Mübalağa sîgasındaki iki isimle devam ediyoruz: <b>el-Vehhâb</b> "karşılıksız veren" anlamında.
-<img class=narrow src="image/ya vehhab.jpg" alt="ya vehhab"></p>
+<p>Mübalağa sîgasındaki 5 isim cami kapısını süslüyor: 
+<img class=full src="image/mubalaga.jpg" alt="Mübalağa sîgasındaki 5 isim"></p>
 <div class="caption">
-  <b>yâ Vehhâb</b> -- her şeyi karşılıksız veren <br>
-  <b>yâ Vedûd</b> -- bütün sevginin kaynağı
+  <b>el-Gaffâr, el-Kahhâr, el-Vehhâb, er-Rezzâk, el-Fettâh</b>
+  <!-- src="image/ya vehhab.jpg" alt="ya vehhab"
+    <b>yâ Vehhâb</b> -- her şeyi karşılıksız veren <br>
+    <b>yâ Vedûd</b> -- bütün sevginin kaynağı -->
 </div>
-<p>Bu ismin geçtiği üç ayetten biri, <b>el-Vehhâb</b> ismiyle biten meşhur dua:
+<p>İlk isim <b>el-Vehhâb</b> "karşılıksız veren" anlamında. Bu ismin geçtiği üç ayetten biri, meşhur bir dua:
 <img src="image/la tuzig qulubana.jpg" alt="la tuzig qulubana"></p>
 <div class="caption">
   <b>Rabbenâ lâ tuziġ kulûbenâ</b>
