--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -227,6 +227,7 @@ Alahussamed.jpg	Ehad	v=112:2&r=AHd&r=Smd&r=wld
 al-wahid.jpg	Vahid	v=12:39&r=wHd&r=qhr
 al-qahhar.jpg	Vahid	v=39:4&r=wHd&r=qhr
 limenil-mulk.jpg	Vahid	v=40:16&r=wHd&r=qhr
+mubalaga.jpg	Vehhab	v=38:9&r=whb
 ya vehhab.jpg	Vehhab	v=38:35&r=whb
 ar-razzaq.jpg	Vehhab	v=51:58&r=rzq
 la tuzig qulubana.jpg	Vehhab	v=3:8&r=whb
@@ -250,7 +251,11 @@ el-evvel.png	Evvel	v=57:3&r=Awl&r=Axr
 el-ahir.png	Evvel	v=57:3&r=Awl&r=Axr
 huvez-zahiru.jpg	Zahir	v=57:3&r=Zhr&r=bTn
 ez-zahir.jpg	Zahir	v=57:3&r=Zhr&r=bTn
-el-batin.png	Zahir	v=57:3&r=Zhr&r=bTn`
+el-batin.png	Zahir	v=57:3&r=Zhr&r=bTn
+leyletul kadri.jpg	Kadir	v=97:3&r=lyl&r=qdr
+el-kadir.jpg	Kadir	v=6:65&r=E*b&r=qdr
+el-muktedir.jpg	Kadir	v=54:55&r=mlk&r=qdr
+vehuve ala.jpg	Kadir	v=67:1&r=qdr&r=$yA`
 
 function readData() {
   for (let d of DATA.split('\n')) {
