--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+12) {
+    #iki li:nth-child(n+13) {
         color: lightgray;
     }
     div.nav {
@@ -85,7 +85,7 @@
   <li>22. <a href="/Kitap/esma/Hayy.html">el-Hayy, el-Kayyûm</a>
   <li>23. <a href="/Kitap/esma/Evvel.html">el-Evvel, el-Âhir</a>
   <li>24. <a href="/Kitap/esma/Zahir.html">ez-Zâhir, el-Bâtın</a>
-  <li>25. el-Kâdir, el-Muktedir
+  <li>25. <a href="/Kitap/esma/Kadir.html">el-Kâdir, el-Muktedir</a>
   <li>26. en-Nûr, el-Hâdî
   <li>27. el-Kebîr, el-Kerîm
   <li>28. el-Ganî, el-Hamîd
