Besmele link added

--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -179,7 +179,7 @@ function init() {
 }
 
 const DATA = 
-`Batanay_besmele.jpg	Rahman	v=1:1&r=rHm
+`Besmele.jpg	Rahman	v=1:1&r=rHm
 Rahman.jpg	Rahman	v=55:1&r=rHm&r=Elm&r=qrA
 mecraha.jpg	Rahman	v=11:41&w=bisomi%20{ll~ahi
 errahman errahim.png		
