--- a/esma/Rahman.html
+++ b/esma/Rahman.html
@@ -14,9 +14,13 @@
 <h3>er-Rahmân, er-Rahîm &emsp;<button class=goBack>◀</button></h3>
 
 <p>Meşhur Ramazan hadisi "Evveli rahmet..." diye başlar. Ramazan'ın ve Kuran'ın evveli <b>Rahmet</b>'tir, çünkü besmele sadece rahmettir:
-<img src="./image/Batanay_besmele.jpg" alt="besmele">
+<img src="./image/Besmele.jpg" alt="besmele">
 <div class="caption">
-  <b><a name="v=1:1&r=rHm">bismillâhirrahmânirrahîm</a></b>
+  <b><a name="v=1:1&r=rHm">bismillâhirrahmânirrahîm</a></b> <br>
+  Hattat: Kemal Batanay <a target="Kuran"
+  href="http://www.kalemguzeli.org/hatteserleriayrinti.php?KNO=1436&HKNO=20">
+    Kalem Güzeli</a>
+
 </div></p>
 <p>İkisi de <b>rahmet</b> ile aynı kökten gelen er-Rahmân ve er-Rahîm, güzel isimlerin en başında sayılır. "Rahmân" ismiyle, Allah kulları arasında ayrım yapmaz, herkese yönelir. Adı aynı ismi taşıyan sure şöyle başlıyor:
 <img src="./image/Rahman.jpg" alt="er-Rahmân">
