--- a/esma/Nur.html
+++ b/esma/Nur.html
@@ -13,30 +13,44 @@
 
 <h3>en-Nûr, el-Hâdî &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p>Hidayet isimlerine sıra geldi:
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
+<p>Hidayet isimlerine sıra geldi. Önce Nûr âyeti:
+<img class=full src="image/nurus-semavat.jpg" alt="allahu-nurus-semavat"></p>
+<div class="caption">
+  <a name="v=24:35&r=nwr&r=smw">24:35</a> 
+  <b>allâhu nûrus-semâvâti vel-ard</b> <br>
+  <i>Allah göklerin ve yerin nûrudur</i> <br>
+  Kaynak: <a target=Kuran href="https://www.simurgsanatevi.com/allahu-nurus-semavati-vel-ard--yagli-boya-hat-tablo">Simurg Sanatevi</a>
+</div>
+<p>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
+<p>Karanlık çoktur, ama ışık bir tanedir. Dünyamızdaki bütün ışığın, ısının, enerjinin, yağmurun ve rızkın kaynağı bir tek güneş olduğu gibi, manevi hayatın ve hidayetin kaynağı da tek bir vahiy güneşidir. Bu nedenle, Yüce Kitabımızın dilinde karanlıklar çoğul, ışık ise tekil kullanılır. <br>
+Gece sadece ışığı gösterebilmek için yaratılmıştır. Kötülük olmadan iyiyi, hastalık olmadan şifayı anlamadığımız gibi, Nur'u anlamak için de karanlık gereklidir. Işığa benzetme yaparak manevi ışıktan, hidayetten bahsediyoruz. Kitap'ta "karanlıklardan aydınlığa çıkarır" tamlaması tam yedi yerde geçiyor. </p>
+<p><a name="v=33:43&r=Zlm&r=nwr">33:43</a> 
+  <b>liyuhricekum minez-zulumâti ilen-nûr</b> <br>
+  <i>O (Allah) ve melekleri sizin için salât eder, sizi karanlıklardan nûra çıkarmak için... O inanlara çok merhametlidir.</i>
+</p>
+<p>
+<img src="image/nurun ala nur.jpg" alt="nurun ala nur"></p>
+<div class="caption">
+  <a name="v=24:35&r=nwr&r=hdy">24:35</a> 
+  <b>nûrun ‘alâ nûr, yehdillâhu linûrihi men yeşâ</b> <br>
+  <i>Nûr üstüne nûr! Allah, dilediğini nûruna eriştirir.</i> <br>
+  Kaynak: <a target=Kuran href="https://pinterest.de/pin/703194929334531323/">Pinterest</a>
+</div>
+<p class=small>Sözlükte “aydınlık, ışık” anlamına gelen nûr kelimesi Kur’ân-ı Kerîm’de ve hadislerde “insanların önünü aydınlatıp doğru ve gerçek olanı görmelerini, hak ile bâtılı, hayır ile şerri ayırt etmelerini sağlayan mânevî ve ilâhî ışık” mânasında kullanılmıştır. Bunun karşıtı zulmettir. “Müminlerin velîsi olan Allah onları karanlıklardan nura çıkarır” meâlindeki âyetlerde mecazi anlamda hidayete nur, dalâlete zulmet denilmiştir. Peygamber gönderilmesinin ve ilâhî kitaplar indirilmesinin esas amacı karanlıkta kalan ve yollarını şaşıran insanlara doğru yolu göstermek olduğundan nur ve zulmet kavramlarına önemle vurgu yapılmıştır.<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/nur">İslam Ansiklopedisi</a>
 </p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>Diğer isim <b>Hâdî</b> ise sadece şurada Allah için kullanılmış:
+<img class=narrow src="image/el-hadî.jpg" alt="el-hadî"></p>
 <div class="caption">
-  <b>en-Nûr</b> -- aydınlık
+  <b>el-Hâdî</b> -- rehber, yol gösteren <br>
+  Kaynak: <a target=Kuran href="https://pinterest.de/pin/6755468175824314/">Pinterest</a>
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
-<div class="caption">
-  <b>el-Hâdî</b> -- rehber
-</div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
+<p><a name="v=25:31&r=hdy&r=nSr">25:31</a>
+  <b>vekefâ birabbike hâdiyen venasîrâ</b> <br>
+  <i>Yol gösterici ve yardımcı olarak Rabbin yeter.</i>
 </p>
 <script src="init.js"></script>
+<script>window.max_index=getIndex() //REMOVE THIS</script>
   </body>
 </html>
