--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+13) {
+    #iki li:nth-child(n+14) {
         color: lightgray;
     }
     div.nav {
@@ -86,7 +86,7 @@
   <li>23. <a href="/Kitap/esma/Evvel.html">el-Evvel, el-Âhir</a>
   <li>24. <a href="/Kitap/esma/Zahir.html">ez-Zâhir, el-Bâtın</a>
   <li>25. <a href="/Kitap/esma/Kadir.html">el-Kâdir, el-Muktedir</a>
-  <li>26. en-Nûr, el-Hâdî
+  <li>26. <a href="/Kitap/esma/Nur.html">en-Nûr, el-Hâdî</a>
   <li>27. el-Kebîr, el-Kerîm
   <li>28. el-Ganî, el-Hamîd
   <li>29. zul-celâli vel-ikrâm
