--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -255,7 +255,10 @@ el-batin.png	Zahir	v=57:3&r=Zhr&r=bTn
 leyletul kadri.jpg	Kadir	v=97:3&r=lyl&r=qdr
 el-kadir.jpg	Kadir	v=6:65&r=E*b&r=qdr
 el-muktedir.jpg	Kadir	v=54:55&r=mlk&r=qdr
-vehuve ala.jpg	Kadir	v=67:1&r=qdr&r=$yA`
+vehuve ala.jpg	Kadir	v=67:1&r=qdr&r=$yA
+nurus-semavat.jpg	Nur	v=24:35&r=nwr&r=smw
+nurun ala nur.jpg	Nur	v=33:43&r=Zlm&r=nwr
+el-hadî.jpg	Nur	v=25:31&r=hdy&r=nSr`
 
 function readData() {
   for (let d of DATA.split('\n')) {
