--- a/esma/Kebir.html
+++ b/esma/Kebir.html
@@ -13,30 +13,40 @@
 
 <h3>el-Kebîr, el-Kerîm &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
+<p>Kuran'da geçmediği halde, ezanlarla birlikte her vakit göğe yükselen şu muhteşem ifade:
+  <img class=narrow src="image/Allahu_ekber.png" alt="Allahu_ekber"></p>
+<div class="caption">
+  <b>Allahu ekber</b> -- Allah (her tasavvurdan) daha büyük
+</div>
+<br>
+<p>Birinci güzel isim <b>el-Kebîr</b> aynı kökten türemiş:
 <p>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
+  <a name="v=40:12&r=Elw&r=kbr">40:12</a>
+  <b>fel-hukmu lillâhil-’aliyyil-kebîr</b> <br>
+  <i>Hüküm yüce ve büyük olan Allah'a aittir</i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p class=small><b>Kebîr</b>, esmâ-i hüsnâdan biri olarak “zâtının ve sıfatlarının mahiyeti bilinemeyecek kadar ulu” şeklinde tanımlanır. Kur'ân-ı Kerîm'de <b>kiber</b> kavramı on dokuz âyette Allah'ın zâtına veya sıfatlarına nisbet edilmektedir. Bunların altısı <b>kebîr</b>, biri <b>mütekebbir</b>, biri “azamet, yücelik ve hükümranlık” anlamındaki <b>kibriyâ</b> kelimesidir. “Büyük, daha büyük, yegâne büyük” mânasına gelen ve Allah'a nisbet edilen <b>ekber</b> Kuran'da halk, rızâ, makt gibi sıfatlarla bağlantılı olarak beş âyette yer alır.<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/kebir--esma-i-husna">İslam Ansiklopedisi</a>
+</p>
+<br>
+<p>İkinci isim <b>Kerîm</b>, insanlara da yakışan güzel bir sıfat:
+<img class=narrow src="image/ya-kerim.jpg" alt="ya-kerim"></p>
 <div class="caption">
-  <b></b> -- 
+  <b>yâ-Kerîm</b>
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>İnsanı titreten, çarpıcı bir soruda kullanılmış:
+<img class=full src="image/eyyuhel-insan.jpg" alt="yâ eyyuhel-insânu"></p>
 <div class="caption">
-  <b></b> -- 
+  Kaynak: <a target=Kuran href="https://zerendudsanat.com/urun/celi-sulus-levha-hat-huseyin-kutlu-80x45/">Zerendud Sanat</a>
 </div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
+<p><a name="v=82:6&r=rbb&r=krm">82:6</a> 
+  <b>yâ eyyuhel-insânu mâ ġarrake birabbikel-kerîm</b> <br>
+  <i>Ey insan, Kerîm Rabbine karşı seni aldatan nedir?</i>
+</p>
+<p class=small>Gazzâlî'nin <b>Kerîm</b> ismiyle ilgili olarak kaydettiği mânalar bu konuda söylenenlerin en kapsamlısıdır: “<b>Kerîm,</b> muktedirken affeden, vaadini yerine getiren, lutfunu umulanın ötesinde gerçekleştiren, kime ne kadar lutufta bulunduğunun hesabını yapmayan, kendisinden başkasına başvurulmasına rızâ göstermeyen, vefasızlığa sitemle mukabelede bulunup dostluğu bozacak bir karşılık vermeyen, kendisine sığınanı yüzüstü bırakmayan, aracı ve şefaatçilere muhtaç kılmayandır.”<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/kerim">İslam Ansiklopedisi</a>
 </p>
 <script src="init.js"></script>
+<script>window.max_index=getIndex() //REMOVE THIS</script>
   </body>
 </html>
