--- a/esma/index.html
+++ b/esma/index.html
@@ -35,10 +35,10 @@
     }
     /* #bir li:nth-child(n+2) {
         color: lightgray;
-    } */
-    #iki li:nth-child(n+14) {
-        color: lightgray;
     }
+    #iki li:nth-child(n+1) {
+        color: lightgray;
+    } */
     div.nav {
         align-items: center;
         display: flex;
@@ -87,7 +87,7 @@
   <li>24. <a href="/Kitap/esma/Zahir.html">ez-Zâhir, el-Bâtın</a>
   <li>25. <a href="/Kitap/esma/Kadir.html">el-Kâdir, el-Muktedir</a>
   <li>26. <a href="/Kitap/esma/Nur.html">en-Nûr, el-Hâdî</a>
-  <li>27. el-Kebîr, el-Kerîm
+  <li>27. <a href="/Kitap/esma/Kebir.html">el-Kebîr, el-Kerîm</a>
   <li>28. el-Ganî, el-Hamîd
   <li>29. zul-celâli vel-ikrâm
 </ol>
