--- a/esma/Celal.html
+++ b/esma/Celal.html
@@ -13,29 +13,42 @@
 
 <h3>zul-celâli vel-ikrâm &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
+<p>Her namazda selamdan sonra, Rabbimizi bu birleşik ismiyle yüceltiriz:
+<img class=full src="image/zul-celali vel-ikram.jpg" alt="zul-celali vel-ikram"></p>
+<div class="caption">
+  Nişancı Mehmed Paşa Camii avlusundan bir görüntü <br>
+  (<b>vav</b> harfinin üstündeki yuvarlak simge ne acaba?)
+</div>
+<p><a name="v=55:27&r=jll&r=krm">55:27</a> 
+  <b>zul-celâli vel-ikrâm</b> <br>
+  <i>Celâl ve ikram sahibi...</i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
+<p>Her tarafı <b>Selâm</b> kaplamış, sakin bir ortamda aniden fırtına kopar, <b>Celâl</b> ismi tecelli eder, her şey darmadağın olur. Fakat bütün bunlar boşuna bir gösteri değildir. <b>İkramların</b> kullara ulaşması için sürekli olarak tekrar edilir.</p>
+<p class=small>Sözlükte “azamet sahibi ve yüce olmak” anlamındaki <b>celâl</b> ile “cömert ve merhametli, asil ve şerefli olmak” mânasındaki keremden türeyen <b>ikrâm</b> kelimelerinin başına <b>zû</b> (sahip) getirilmesiyle meydana gelen bir terkip olup “celâl ve ikrâm sahibi” demektir. Bu isim Kuran'da iki yerde geçer: er-Rahmân 27 ve 78. Bunların ilkinde <b>rab</b> kelimesine muzaf olan “vech”in sıfatıdır; yeryüzündeki her <s>canlı</s> şey yok olurken azamet ve kerem sahibi Rabbin <s>zâtının</s> yüzünün bâki kalacağı ifade edilir. İkincisinde terkip “rabbin”in sıfatı konumundadır ve ilkinde olduğu gibi, “Azamet ve kerem sahibi olan Rabbinin adı yücelerden yücedir” mânasına gelmektedir.<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/zul-celal-vel-ikram">İslam Ansiklopedisi</a>
 </p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>Aynı haşmetli sözün başka bir ifadesi:
+<img class=narrow src="image/zul-celal.jpg" alt="zul-celali vel-ikram"></p>
 <div class="caption">
-  <b></b> -- 
+  <b>zul-celâli vel-ikrâm</b>
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>İlk gün vaadedilen “lafza-i celâl” açıklaması, 29 günde yerini bulmuş olmalı... Bütün proje <b>Allah</b> ismini bir nebze anlamak için yapılmıştı, ve en azından müellifin şahsında amacına ulaştı, <b>el-hamdu lillah.</b></p>
+<br>
+<p>Esmâ-i Husnâ konusunu şu resimle mühürlemek uygun düşer:
+<img src="image/vechu rabbik.jpg" alt="veyebqâ vechu rabbike"></p>
 <div class="caption">
-  <b></b> -- 
+  Dünyanın karmaşası solup giderken geriye üç kelime kalıyor
 </div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
+<div class=preWrap>
+  <b>yebqâ</b>: baki kalır
+  <b>vechu</b>: yüzü
+  <b>rabbike</b>: Rabbinin
+</div>
+<p><a name="v=55:27&r=wjh&r=jll&r=krm">55:26-27</a>
+  <b>kullu men 'aleyhâ fân</b> <br>
+  <i>Yer üzerinde bulunan her şey fânidir.</i> <br>
+  <b>veyebqâ vechu rabbike zul-celâli vel-ikrâm</b> <br>
+  <i>Yalnız celâl ve ikram sahibi Rabbinin yüzü baki kalacaktır.</i>
 </p>
 <script src="init.js"></script>
   </body>
