--- a/esma/Rahman.html
+++ b/esma/Rahman.html
@@ -17,7 +17,7 @@
 <img src="./image/Besmele.jpg" alt="besmele">
 <div class="caption">
   <b><a name="v=1:1&r=rHm">bismillâhirrahmânirrahîm</a></b> <br>
-  Hattat: Kemal Batanay <a target="Kuran"
+  Kemal Batanay, 1955 -- <a target="Kuran"
   href="http://www.kalemguzeli.org/hatteserleriayrinti.php?KNO=1436&HKNO=20">
     Kalem Güzeli</a>
 
@@ -33,7 +33,7 @@ Demek ki Rahmân, kendi nefsine yazdığı rahmetinin gereği olarak Kuran'ı ö
 <p>Diğer ismin tecellisi ise iman gerektiriyor:<br>
 <a name="v=33:43&r=Amn&r=rHm">33:43</a> <b>vekâne bilmu-minîne rahîmâ</b><br>
 Yani "Rahîm" ismi ancak ona layık olan müminler için...</p>
-<p>Hz Nuh'un dilinde "bismillah" biraz farklı, ama yine "Rahîm" ismiyle bitiyor:
+<p>Hz Nuh'un dilinde "bismillah" biraz farklı, ama duanın sonunda yine "Rahîm" ismi var:
   <img src="image/mecraha.jpg" alt="bismillâhi mecrâhâ vemursâhâ"></p>
   <p>
     <a name="v=11:41&w=bisomi%20{ll~ahi">11:41</a> 
