--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -259,7 +259,14 @@ vehuve ala.jpg	Kadir	v=67:1&r=qdr&r=$yA
 nurus-semavat.jpg	Nur	v=24:35&r=nwr&r=smw
 nurun ala nur.jpg	Nur	v=33:43&r=Zlm&r=nwr
 el-hadî.jpg	Nur	v=25:31&r=hdy&r=nSr`
+/*
+ya-kerim.jpg	Kebir	v=82:6&r=rbb&r=krm
+eyyuhel-insan.jpg	Kebir	v=82:6&r=rbb&r=krm
 
+zul-celali vel-ikram.jpg	Celal	v=55:27&r=wjh&r=jll&r=krm
+zul-celal.jpg	Celal	v=55:27&r=wjh&r=jll&r=krm
+vechu rabbik.jpg	Celal	v=55:27&r=wjh&r=jll&r=krm
+*/
 function readData() {
   for (let d of DATA.split('\n')) {
     let [file, name, link] = d.split('\t')
