--- a/esma/Gani.html
+++ b/esma/Gani.html
@@ -13,30 +13,32 @@
 
 <h3>el-Ganî, el-Hamîd &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
+<p>İçinde sert hükümler olan Muhammed suresi, müminlere infak çağrısı ile bitiyor. Allah'ın zenginliği, ancak kulların yoksul ve muhtaç oluşu ile anlaşılır:
+<img class=narrow src="image/entumul-fuqara.jpg" alt="entumul-fukarâ"></p>
+<p><a name="v=47:38&r=gny&r=fqr">47:38</a>
+  <b>vallâhul-ġaniyyu veentumul-fukarâ</b> <br>
+  <i>İşte siz Allah yolunda harcama yapmaya çağrılıyorsunuz, fakat içinizden bir kısmı cimrilik ediyor. Halbuki cimrilik eden ancak kendine karşı cimrilik etmiş olur; zira <b>Allah zengindir, siz yoksulsunuz</b>. Eğer hak çağrısına sırtınızı dönerseniz Allah sizin yerinize başka bir topluluk getirir; sonra onlar sizin gibi olmazlar.</i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>Allah sadece kıyasla değil, mutlak olarak zengindir:
+<img class=narrow src="image/Allah ganiy.jpg" alt="Allah ganiy"></p>
 <div class="caption">
-  <b></b> -- 
+  <b>allâhu ġaniyy</b> -- Allah zengindir
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
+<p class=small><b>Ganî</b> kelimesi, “zengin, kendi varlığıyla yetinip başkasına muhtaç olmayan, müstağni” anlamına gelir. ... Esmâ-i hüsnâdan biri olarak <b>ganî'</b>ye verilen bu mânalar şüphe yok ki Allah'a mahsustur ve ganiyy-i mutlak sadece O'dur. O'ndan başkasına izâfe edilen bütün zenginlikler aslında mevcut olan bir ihtiyacın giderilmesi anlamına geleceğinden nisbî ve mecazî bir nitelik taşır. Nitekim, “Zenginlik fazla servete sahip olmak değildir; asıl zenginlik gönlün ihtiyaç duygusundan uzak kalabilmesidir” (Buhârî, “Riḳāḳ”, 15; Müslim, “Zekât”, 120) meâlindeki hadis de buna işaret etmektedir.<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/gani">İslam Ansiklopedisi</a>
+</p>
+<br>
+<p>İkinci kelime zenginlikle yakından ilgili:
+<img class=narrow src="image/al-hamid.jpg" alt="al-hamid"></p>
 <div class="caption">
-  <b></b> -- 
+  <b>el-Hamîd</b> -- övülmeye lâyık
 </div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
+<p><!-- İki güzel ismi birleştiren ifade 5 ayette geçiyor: <br> -->
+  <a name="v=35:15&r=gny&r=fqr&r=Hmd">35:15</a>
+  <b>vallâhu huvel-ġaniyyul-hamîd</b> <br>
+  <i>Ey insanlar! Allah'a muhtaç olan sizsiniz. Zengin ve övülmeye lâyık olan ancak O'dur.</i>
 </p>
 <script src="init.js"></script>
+<script>window.max_index=getIndex() //REMOVE THIS</script>
   </body>
 </html>
