--- a/esma/index.html
+++ b/esma/index.html
@@ -88,7 +88,7 @@
   <li>25. <a href="/Kitap/esma/Kadir.html">el-Kâdir, el-Muktedir</a>
   <li>26. <a href="/Kitap/esma/Nur.html">en-Nûr, el-Hâdî</a>
   <li>27. <a href="/Kitap/esma/Kebir.html">el-Kebîr, el-Kerîm</a>
-  <li>28. el-Ganî, el-Hamîd
+  <li>28. <a href="/Kitap/esma/Gani.html">el-Ganî, el-Hamîd</a>
   <li>29. zul-celâli vel-ikrâm
 </ol>
 
