--- a/esma/Gani.html
+++ b/esma/Gani.html
@@ -39,6 +39,6 @@
   <i>Ey insanlar! Allah'a muhtaç olan sizsiniz. Zengin ve övülmeye lâyık olan ancak O'dur.</i>
 </p>
 <script src="init.js"></script>
-<script>window.max_index=getIndex() //REMOVE THIS</script>
+<!-- <script>window.max_index=getIndex() //REMOVE THIS</script> -->
   </body>
 </html>
