--- a/esma/index.html
+++ b/esma/index.html
@@ -89,7 +89,7 @@
   <li>26. <a href="/Kitap/esma/Nur.html">en-Nûr, el-Hâdî</a>
   <li>27. <a href="/Kitap/esma/Kebir.html">el-Kebîr, el-Kerîm</a>
   <li>28. <a href="/Kitap/esma/Gani.html">el-Ganî, el-Hamîd</a>
-  <li>29. zul-celâli vel-ikrâm
+  <li>29. <a href="/Kitap/esma/Celal.html">zul-celâli vel-ikrâm</a>
 </ol>
 
 <p><br>Bu çalışmanın yan ürünü olarak, 80 kadar hat eserine tek sayfadan erişim sağlandı: <a href="/Kitap/esma/Husna.html">Levhalar</a>
