improve file names

--- a/esma/Aliyy.html
+++ b/esma/Aliyy.html
@@ -17,7 +17,7 @@
   <a name="v=2:255&r=Elw&r=EZm">Âyetul-kursînin</a> ve 
   <a name="v=42:4&r=Elw&r=EZm">Şûra 4. âyetin</a> sonunda: <br>
   <b>vehuvel-‘aliyyul-‘azîm</b> &ensp; <i>O yücedir, uludur</i>
-<img src="image/vehuvel-aliyyul-azîm.jpg" alt="vehuvel-aliyyul-azîm">
+<img src="image/el-aliyyul-azîm.jpg" alt="vehuvel-aliyyul-azîm">
 <div class="caption">
   Kaynak: <a target=Kuran href="https://www.yeditepebienali.com/~/gorsel/yayin/Nilg%C3%BCn%20Alp,%20At%C3%B6lye%20Hi%C3%A7%20-%20Hi%C3%A7%E2%80%99ten%20Gelen%20Dualar.pdf">HİÇ'TEN GELEN DUALAR</a>
 </div>
