--- a/esma/Celal.html
+++ b/esma/Celal.html
@@ -14,7 +14,7 @@
 <h3>zul-celâli vel-ikrâm &emsp;<button class=goBack>◀</button></h3>
 
 <p>Her namazda selamdan sonra, Rabbimizi bu birleşik ismiyle yüceltiriz:
-<img class=full src="image/zul-celali vel-ikram.jpg" alt="zul-celali vel-ikram"></p>
+<img class=full src="image/zulcelalivelikram.jpg" alt="zul-celali vel-ikram"></p>
 <div class="caption">
   Nişancı Mehmed Paşa Camii avlusundan bir görüntü <br>
   (<b>vav</b> harfinin üstündeki yuvarlak simge ne acaba?)
