--- a/esma/Malik.html
+++ b/esma/Malik.html
@@ -33,7 +33,7 @@
 <p><a name="v=23:116&r=mlk&r=Hqq">23:116</a> <b>fete’âlallâhul-melikul-hakk</b> <br>
 <i>Gerçek hükümdar olan Allah ne yücedir. O’ndan başka ilah yoktur. O, değerli arşın Sahibidir.</i></p>
 <p>Bu ayetten esinlenen güzel bir levha:
-<img src="image/melikul-hakkul-mubin.jpg" alt="el-melikul-hakk">
+<img src="image/melikul-hakk.jpg" alt="el-melikul-hakk">
 <div class="caption">
   <b>lâ ilâhe illallâh, el-melikul-hakkul-mubîn<br>
   muhammedur-rasûlullâh, sâdikul-va'dil-emîn</b>
