--- a/esma/Vehhab.html
+++ b/esma/Vehhab.html
@@ -14,7 +14,7 @@
 <h3>el-Vehhâb, er-Rezzâk &emsp;<button class=goBack>◀</button></h3>
 
 <p>Mübalağa sîgasındaki 5 isim cami kapısını süslüyor: 
-<img class=full src="image/mubalaga.jpg" alt="Mübalağa sîgasındaki 5 isim"></p>
+<img class=full src="image/el-vehhab.jpg" alt="Mübalağa sîgasındaki 5 isim"></p>
 <div class="caption">
   <b>el-Gaffâr, el-Kahhâr, el-Vehhâb, er-Rezzâk, el-Fettâh</b>
   <!-- src="image/ya vehhab.jpg" alt="ya vehhab"
