--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -24,7 +24,7 @@
   }
   img {
     max-width: 100%;
-    max-height: 85vh;
+    max-height: 86vh;
     margin-top: 6px;
   }
   button {  
@@ -189,7 +189,7 @@ vezkur rabbeke.jpg	Allah	v=3:41&r=*kr&r=rbb&r=kvr
 vezkurullahe.jpg		
 malikul-mulk.jpg	Malik	v=3:26&r=mlk
 maliki yevmiddin.jpg	Malik	v=1:4&r=mlk&r=ywm
-melikul-hakkul-mubin.jpg	Malik	v=23:116&r=mlk&r=Hqq
+melikul-hakk.jpg	Malik	v=23:116&r=mlk&r=Hqq
 sayfa 547.png	Selam		
 Kuddûs-Selâm.jpg	Selam	v=59:23&r=mlk&r=qds&r=slm
 es-Selâm.jpg	Selam	v=10:25&r=dwr&r=slm
@@ -208,7 +208,7 @@ el-halim.jpg	Halim	v=22:59&r=Hlm&r=Elm
 el-alim.jpg	Halim	v=33:51&r=Hlm&r=Elm
 allamul-guyub.jpg	Allam	v=9:78&r=Elm&r=gyb
 Allah-Allam.jpg	Allam	v=34:48&r=Elm&r=gyb
-vehuvel-aliyyul-azîm.jpg	Aliyy	v=2:255&r=Elw&r=EZm
+el-aliyyul-azîm.jpg	Aliyy	v=2:255&r=Elw&r=EZm
 el-aliyy.png	Aliyy	v=42:4&r=Elw&r=EZm
 fesebbih.jpg	Aliyy	v=56:96&r=smw&r=EZm
 subhanallahil-azim.JPG		
@@ -228,7 +228,7 @@ Alahussamed.jpg	Ehad	v=112:2&r=AHd&r=Smd&r=wld
 al-wahid.jpg	Vahid	v=12:39&r=wHd&r=qhr
 al-qahhar.jpg	Vahid	v=39:4&r=wHd&r=qhr
 limenil-mulk.jpg	Vahid	v=40:16&r=wHd&r=qhr
-mubalaga.jpg	Vehhab	v=38:9&r=whb
+el-vehhab.jpg	Vehhab	v=38:9&r=whb
 ya vehhab.jpg	Vehhab	v=38:35&r=whb
 ar-razzaq.jpg	Vehhab	v=51:58&r=rzq
 la tuzig qulubana.jpg	Vehhab	v=3:8&r=whb
@@ -265,7 +265,7 @@ eyyuhel-insan.jpg	Kebir	v=82:6&r=rbb&r=krm
 entumul-fuqara.jpg	Gani	v=47:38&r=gny&r=fqr
 Allah ganiy.jpg	Gani	v=47:38&r=gny&r=fqr
 al-hamid.jpg	Gani	v=35:15&r=gny&r=fqr&r=Hmd
-zul-celali vel-ikram.jpg	Celal	v=55:27&r=wjh&r=jll&r=krm
+zulcelalivelikram.jpg	Celal	v=55:27&r=wjh&r=jll&r=krm
 zul-celal.jpg	Celal	v=55:27&r=wjh&r=jll&r=krm
 vechu rabbik.jpg	Celal	v=55:27&r=wjh&r=jll&r=krm`
 
