--- a/esma/index.html
+++ b/esma/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport"    content="width=device-width">
     <meta name="author"      content="M A Eyler, Istanbul, 2023" />
     <meta name="description" content="Esma-i Husna" />
-    <link rel="icon" href="/Kuran/image/icon.png">
+    <link rel="icon" href="icon-esma.png">
+    <link rel="manifest" href="manifest.json">
+     
     <title>Esmâ-i Husnâ</title>
   </head>
   <style>
@@ -96,5 +98,6 @@
 </p>
 <br>
 <script src="init.js"></script>
+<script>navigator.serviceWorker.register('sw.js')</script>
   </body>
 </html>
