--- a/ders/index.html
+++ b/ders/index.html
@@ -34,7 +34,7 @@
   <li><a href="enbiya.html">Peygamberler</a>
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
   <li><a href="isimler.html">Özel isimler</a>
-  <li><a href="sunum4.2.html">Sunum V4.2</a>
+  <li><a href="sunum4.2.html">Benzerlik V4.2</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
 </ol>
 <p>Videolar: <a target=Kuran
@@ -45,12 +45,12 @@
 <p>Yazılımı uygulayan web sayfaları</p>
 <ol>
   <li><a href="/Kitap/rama/">Ramazan 2020 notları</a>
-  <li><a href="/Kitap/esma/">Ramazan 2023 notları</a>
-  <li><a href="/Kitap/cuma/adalet.html"><small>Adalet ve ibadet (Karabaşoğlu)</small></a>
-  <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
-  <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
+  <li><a href="/Kitap/esma/">Esmâ-i Husnâ 2023</a>
+  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet</a>
+  <li><a href="/Kitap/cuma/geylani.html">Abdulqadir Geylani</a>
+  <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (Zaman)</a>
   <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
-  <li><a href="/Kitap/cuma/iktibas.html"><small>Ahmed ü Mahmûd u Muhammed</small></a>
+  <li><a href="/Kitap/cuma/iktibas.html">Şiirde iktibas sanatı</a>
   <!-- <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a> -->
 </ol>
 <p>Levhalar: <a href="/Kitap/esma/Husna.html">Esmâ-i Husnâ</a></p>
